# cc-final-flask

./: .gitignore  Dockerfile  docker-compose.yml  entry_script.sh  final.ini  final.service  pyproject.toml  requirements.txt
final/: __init__.py
final/app/: app.py
final/blueprints/: __init__.py  charts.py  data.py  test.py  upload.py
final/constants/: __init__.py  env.py  file_upload.py  postgres.py  regexes.py
final/models/: __init__.py  data_pull.py  household.py  product.py  transaction.py
final/static/styles/: datatable.css
final/templates/: base.html  charts.html  data_table.html  upload.html
final/utils/: __init__.py  parse_models.py
models/: transaction.py
nginx/: final
