[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Nick Lay <layns@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
uwsgi = "^2.0.21"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
black = "^23.3.0"
progress = "^1.6"
plotly = "^5.14.1"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
